RelationTypes/One To many/Strong/objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <referenceTo>College__c</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Teacher_Subject__c</fullName>
        <label>Teacher Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Math</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Teacher</label>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>